--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 </script>
 
 <script src='//public.zhfile.com/js/ray.js'></script>
-<script src='cp.js'></script>
+<script src='cp_1.js'></script>
 
 </body>
 </html>
