--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta content="telephone=no" name="format-detection"/>
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
-    <title>返回淘口令页面</title>
+    <title>一起赚优惠券</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
 	<script src='//public.zhfile.com/jquery/jquery.min.js'></script>
